# agent-news-wire

./: .gitignore  .gitlab-ci.yml  API-REFERENCE.md  ARCHITECTURE.md  BUILD-ENV.md  CHECKLIST.md  CONTRIBUTING.md  DATA-SOURCES.md  ECONOMICS.md  FRONTEND-PROGRESS.md  HACKATHON-BATTLE-PLAN.md  IMPLEMENTATION-PLAN.md  KEYS.md  LICENSE  MASTER-REFERENCE.md  NEW-DATA-SOURCES.md  OVERVIEW.md  PROGRESS-REPORT.md  README.md  TODO.md  docker-compose.yml  render.yaml
api/: .dockerignore  .env.example  Dockerfile  Dockerfile.bak  nixpacks.toml  package-lock.json  package.json  railway.toml
api/migrations/: 001_add_headline_channel_unique.sql
api/public/: skill.md
api/src/: index.ts
demo/: alpha-agent.ts  package.json  run-demo.ts  subscriber.ts  trading-agent.ts
docs/: AGENT-INTEGRATION.md  API.md  ARCHITECTURE.md  DEMO-AGENTS.md  DEPLOYMENT.md  HACKATHON.md  INDEX.md  PUBLISHERS.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.bak  README.md  next.config.js  nixpacks.toml  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/: manifest.json  skill.md
frontend/scripts/: generate-favicons.mjs
programs/: Anchor.toml  BUILD.md  Cargo.toml
programs/alerts/: Cargo.toml
programs/publisher/: Cargo.toml
programs/publisher/src/: lib.rs
programs/subscription/: Cargo.toml
programs/subscription/src/: lib.rs
public/: skill.md
scripts/: cleanup-duplicates.js  cleanup-duplicates.sql  initialize-programs.ts  package-lock.json  package.json  test-e2e-flow.ts
sdk/: package-lock.json  package.json
(+59 files in other folders)
