[package]
name = "subscription-registry"
version = "0.1.0"
description = "Agent News Wire - Subscription Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
